# irodori-tts-infra

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: irodori-rvc-architecture.md  irodori-tts-optimization.md
docs/adr/: 0001-irodori-runtime-access.md  0002-rvc-runtime-sidecar.md
docs/datasets/: extraction.md
docs/deploy/: rvc-training.md  windows.md
docs/plans/: phase1-porting.md
docs/superpowers/plans/: 2026-05-03-phase3-quality-gate-core.md
src/irodori_tts_infra/: AGENTS.md  __init__.py
src/irodori_tts_infra/cache/: AGENTS.md
src/irodori_tts_infra/client/: AGENTS.md  __init__.py  async_.py  cli.py  errors.py  sync.py
src/irodori_tts_infra/config/: AGENTS.md  __init__.py  settings.py
src/irodori_tts_infra/contracts/: AGENTS.md  __init__.py  errors.py  health.py  synthesis.py  voices.py
src/irodori_tts_infra/datasets/: __init__.py  extract.py  models.py  moe_speech.py
src/irodori_tts_infra/deploy/: cli.py
src/irodori_tts_infra/deploy/remote/: __init__.py  _common.py  bootstrap.py  service.py  sync.py
src/irodori_tts_infra/engine/: AGENTS.md  __init__.py  errors.py  models.py  pipeline.py  protocols.py
src/irodori_tts_infra/engine/backends/: AGENTS.md  __init__.py  fake.py  irodori.py  rvc.py
src/irodori_tts_infra/metrics/: AGENTS.md  __init__.py  models.py  quality.py
src/irodori_tts_infra/server/: AGENTS.md  __init__.py  app.py  dependencies.py  errors.py
src/irodori_tts_infra/server/routers/: AGENTS.md  health.py  synthesis.py
src/irodori_tts_infra/text/: AGENTS.md  __init__.py  markdown.py  models.py  speaker_tags.py
src/irodori_tts_infra/voice_bank/: AGENTS.md  __init__.py  captions.py  models.py  repository.py
tests/: AGENTS.md  test_smoke.py
tests/client/: test_async_client.py  test_cli.py  test_sync_client.py
tests/config/: test_settings.py
tests/contracts/: test_errors.py  test_synthesis_contracts.py  test_voices.py
tests/datasets/: test_extract.py  test_models.py  test_moe_speech.py
tests/deploy/: test_remote.py
tests/engine/: test_pipeline.py
tests/engine/backends/: test_fake.py  test_irodori.py  test_protocol_compliance.py  test_rvc.py
tests/gpu/: test_phase2_e2e_smoke.py
tests/metrics/: test_quality.py
tests/server/: conftest.py  test_app.py
tests/server/routers/: test_health.py  test_synthesis.py
tests/text/: test_markdown.py  test_speaker_tags.py
tests/voice_bank/: test_captions.py  test_models.py  test_repository.py
