[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "irodori-tts-infra"
version = "0.1.0"
description = "Irodori-TTS + RVC voice conversion infrastructure for character-consistent Japanese novel TTS."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "SankenBisha" },
]
keywords = ["tts", "irodori", "rvc", "voice-conversion", "japanese"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<1",
  "structlog>=24.4,<26",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]
client = [
  "rich>=13.9,<15",
]
metrics = [
  "opentelemetry-api>=1.28,<2",
  "opentelemetry-sdk>=1.28,<2",
  "prometheus-client>=0.21,<1",
]
irodori = []
all = [
  "irodori-tts-infra[server,client,metrics,irodori]",
]

[project.scripts]
irodori-tts = "irodori_tts_infra.client.cli:app"
irodori-tts-deploy = "irodori_tts_infra.deploy.cli:app"

[dependency-groups]
dev = [
  "coverage[toml]>=7.6,<8",
  "mypy>=1.19,<2",
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7.0,<8",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.15,<0.16",
  "vulture>=2.16",
  "deptry>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/irodori_tts_infra"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]

# --- Ruff ---

[tool.ruff]
required-version = ">=0.15.0,<0.16.0"
target-version = "py311"
line-length = 100
indent-width = 4
src = ["src", "tests"]
respect-gitignore = true
extend-exclude = [
  "build",
  "dist",
  "models",
  "checkpoints",
  "runs",
  "outputs",
  "audio",
  "data",
]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812",  # formatter conflict
  "ISC001",  # formatter conflict
  "CPY001",  # copyright headers are project policy
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # missing docstrings — forced docstrings create slop
  "D203",  # pydocstyle conflict
  "D213",  # pydocstyle conflict
]
fixable = ["ALL"]
unfixable = [
  "ERA001",  # force manual inspection of commented-out code
]
task-tags = ["TODO", "FIXME", "HACK", "XXX"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "D",
  "S101",  # pytest uses assert
]
"scripts/**" = [
  "T201",  # scripts may print
]
"src/**/__init__.py" = [
  "F401",  # explicit re-export surface
  "RUF067",  # __version__ via importlib.metadata
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Header",
]

[tool.ruff.lint.flake8-pytest-style]
raises-require-match-for = ["Exception", "BaseException"]
warns-require-match-for = ["Warning", "UserWarning", "DeprecationWarning"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["irodori_tts_infra"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-bool-expr = 4
max-branches = 12
max-locals = 15
max-nested-blocks = 4
max-positional-args = 5
max-public-methods = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88
skip-magic-trailing-comma = false

# --- mypy ---

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = false
explicit_package_bases = false
exclude_gitignore = true

strict = true
warn_unreachable = true
strict_equality_for_none = true
local_partial_types = true
implicit_optional = false

show_error_codes = true
show_error_code_links = true
show_column_numbers = true
pretty = true
error_summary = true

enable_error_code = [
  "deprecated",
  "explicit-override",
  "ignore-without-code",
  "mutable-override",
  "possibly-undefined",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

# --- deptry ---

# TODO: Remove ignores as implementation progresses
[tool.deptry.per_rule_ignores]
DEP002 = [
  "structlog",
  "fastapi",
  "uvicorn",
  "rich",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "prometheus-client",
  "irodori-tts-infra",
]

# --- vulture ---

[tool.vulture]
ignore_names = [
  "aliases",
  "content_type",
  "deploy_bootstrap",
  "deploy_start",
  "deploy_status",
  "deploy_stop",
  "deploy_sync",
  "exc",
  "exc_type",
  "get_health",
  "main",
  "model_config",
  "model_loaded",
  "status",
  "synthesize",
  "synthesize_batch",
  "synthesize_stream",
  "to_bytes",
  "total_elapsed_seconds",
  "traceback",
  "warm_up",
  "_normalize_aliases",
  "_reject_*",
  "_serialize_*",
  "_validate_*",
]

# --- pytest ---

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  "-m",
  "not integration and not gpu and not slow",
  "--cov=irodori_tts_infra",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
]
markers = [
  "unit: fast deterministic tests with no network, GPU, or external services",
  "integration: tests that require external services, network, SSH, or real subprocesses",
  "gpu: tests that require CUDA/GPU hardware or Irodori-TTS runtime",
  "slow: tests that are too slow for the default local loop",
  "ssh: tests that require SSH access to a remote host",
]
filterwarnings = ["error"]
xfail_strict = true
log_cli = false
log_level = "INFO"

# --- coverage ---

[tool.coverage.run]
branch = true
source = ["irodori_tts_infra"]
parallel = true
omit = [
  "tests/*",
  "src/irodori_tts_infra/client/cli.py",
  "src/irodori_tts_infra/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "raise NotImplementedError",
  "assert_never\\(",
]

[tool.coverage.xml]
output = "coverage.xml"
